修正不显示description的bug 存在问题：主页为何显示如此慢？

--- a/partials/user-view.html
+++ b/partials/user-view.html
@@ -17,7 +17,7 @@
   </tr>
   <tr>
     <td>Description</td>
-    <td>{{user.descrition}}</td>
+    <td>{{user.description}}</td>
   </tr>
 </table>
 <div>
